# wikigraph

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: DEPLOY.md  install-openclaw.md  server-install.sh
lcwiki/: __init__.py  __main__.py  _default_config.py  analyze.py  backfill.py  build.py  cache.py  cluster.py  compile.py  compile_cmd.py  compile_verify.py  convert.py  detect.py  export.py  graph_cmd.py  graph_verify.py  index.py  ingest.py  ingest_cmd.py  ingest_verify.py  merge.py  query.py  report.py  runlog.py  skill-claw.md  skill.md  structure.py  update.py  validate.py  wiki.py
lcwiki/_vendored_graphify/: __init__.py  analyze.py  export.py
scripts/: deploy.sh
tests/: test_aliases_verify.py  test_concepts_index_writer.py  test_filename_index.py  test_smoke.py  test_tldr_cache.py
tests/bench/: bench_fixes.py  gen_synthetic_kb.py  run_bench.py
